# eic_endcap_insert

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  athena.xml  endcapP_insert.xml  endcapP_insert_old.xml  endcapP_insert_reco.py  gps.mac  insert_setup.sh  loop_energies.sh  recon_only  run.sh  run_sim  run_sim_gps  run_sim_hepmc
analysis/: AnaPi0gg.C  AnaRes.C  DrawPi0gg.C  DrawPi0ggMerge.C  DrawRes.C  ECalDesignFigures.ipynb  EtaVsAcceptance-NewBeampipe.ipynb  EtaVsAcceptance.ipynb  InsertShowerAnalysis.ipynb  InteractionLengths.ipynb  TMVAClassification.C  ToyPi0gg.C  Tuning.C  WireframeExample.ipynb  ep_hfs_coverage.py  hepmc.ipynb  hfs_distribution.C  insert_analysis.ipynb  integrated_interaction_lengths.py  integrated_interaction_lengths_phistar.py  integrated_interaction_lengths_phistar.py~  integrated_interaction_lengths_phistar.sh  integrated_interaction_lengths_phistar.sh~  pendcap_analysis_djangoh.ipynb  pi0gToy.C  pion_survival.py  plot_perf.C  plots.py  sampling_fraction.C
calibrations/: README.md  calo_digi_default.json  calo_digi_table_v3.xlsx  emcal_barrel_calibration.json  material-maps.json  materials-map.cbor
compact/: configuration_default.xml  configuration_nohole.xml  definitions.xml  ecal.xml  ecal_forward_homogeneous.xml  ecal_forward_homogenous.xml  ecal_forward_scfi_zhongling.xml  ecal_zhongling.xml  endcapP_insert.xml  free_parameters.xml  hcal.xml  hcal_ATHENA.xml  hcal_ECCE.xml  helmholtz.xml  leakage_detector.xml  materials.xml  pECalInsert.xml  pHCalInsert.xml  pid_config_acadia.xml  pid_config_canyonlands.xml  tracking_config_acadia.xml  tracking_config_canyonlands.xml
compact/ecal/: ecal_forward_homogeneous.xml  ecal_forward_insert_homogeneous.xml  ecal_forward_scfi.xml
compact/hcal/: hcal_forward_ATHENA.xml  hcal_forward_ECCE.xml  hcal_forward_insert.xml
compact/zdc/: zdc_hcal.xml
fieldmaps/: EIC_v.2.0.3_Magnetic_Field_Map_2021_09_28_radial_coords_cm_T.Bmap.txt
full_sim/: endcapP_full.xml  endcapP_full_reco.py  run_sim_full
hepmc_generation/: .gitignore  gen_electrons.cxx  gen_particles.cxx
ip6/: central_beampipe.xml  ip6_defs.xml
reports/templates/: detector_views.md
scripts/: convert_to_gdml.py  endcapP_insert_reco.py  example_dd4hep.cxx  gps.mac  loop_energies.sh  makeplot.C  plot_ce_ecal_placement.py  recon_only.sh  run_detector_simulation.py  run_sim_gps.sh  run_sim_hepmc.sh  test_ACTS.cxx  zdc_reco.py
src/: EndcapCalorimeterWithInsert.cpp  EndcapPInsert_geo.cpp  HCalEndcapPWithInsert_geo.cpp  InsertCalorimeter_geo.cpp  ScFiCalorimeter_geo.cpp  ScFiCalorimeter_geo_zhongling.cpp  ZDCHcal_geo.cpp  pEndcapInsert_geo.cpp  pEndcap_geo.cpp
src/deprecated/: BackwardGEMTracker_geo.cpp  BarrelCalorimeterHybrid_geo.cpp
xml/: endcapP_insert.xml  endcapP_insert_CALICE.xml  zdc.xml
